--- a/apps/docs/content/docs/react/migration/migrating-to-v3.mdx
+++ b/apps/docs/content/docs/react/migration/migrating-to-v3.mdx
@@ -1,10 +1,10 @@
 ---
-title: Migrating to v3
-description: Learn how to migrate from v2 to v3
+title: Migrating to v3/v4
+description: Learn how to migrate from v2 to v3 and v4
 icon: CircleFadingArrowUp
 ---
 
-Stepperize v3 brings with it a number of naming changes to make the pattern. 
+Stepperize v3 brings with it a number of naming changes to make the pattern.
 It also adds a `switch` method that allows to render in a simpler way the components we want for each step.
 
 ## Breaking Changes
@@ -34,13 +34,13 @@ const MySteps = () => {
   return (
     <>
       {stepper.switch({
-        "first": (step) => <p>This is the {step.title} step.</p>,
-        "second": (step) => <p>This is the {step.title} step.</p>,
-        "last": (step) => <p>You have reached the {step.title} step.</p>,
+        first: (step) => <p>This is the {step.title} step.</p>,
+        second: (step) => <p>This is the {step.title} step.</p>,
+        last: (step) => <p>You have reached the {step.title} step.</p>,
       })}
     </>
-  )
-}
+  );
+};
 ```
 
 ### Add `all` property
