--- a/apps/docs/content/docs/react/api-references/hook.mdx
+++ b/apps/docs/content/docs/react/api-references/hook.mdx
@@ -360,6 +360,8 @@ stepper.resetMetadata(true | false);
 | afterNext     | `(callback: () => Promise<void> \| void) => void`                                                                    | Executes a function after moving to the next step                                                                      |
 | beforePrev    | `(callback: () => Promise<boolean> \| boolean) => void`                                                              | Executes a function before moving to the previous step                                                                 |
 | afterPrev     | `(callback: () => Promise<void> \| void) => void`                                                                    | Executes a function after moving to the previous step                                                                  |
+| beforeGoTo    | `(id: string, callback: () => Promise<boolean> \| boolean) => void`                                                 | Executes a function before moving to a specific step                                                                   |
+| afterGoTo     | `(id: string, callback: () => Promise<void> \| void) => void`                                                       | Executes a function after moving to a specific step                                                                    |
 | next          | `() => void`                                                                                                         | Advances to the next step                                                                                              |
 | prev          | `() => void`                                                                                                         | Returns to the previous step                                                                                           |
 | get           | `(id: string) => Step`                                                                                               | Returns a step by its ID                                                                                               |
